solid/src/main/java/io/github/hustonic/example/solid/i/good/Borrowable.java
package io.github.hustonic.example.solid.i.good;

/**
 * @author Huston
 */
public interface Borrowable {
    /**
     * 借款
     */
    void borrow();
}
