solid/src/main/java/io/github/hustonic/example/solid/i/bad/Order.java
package io.github.hustonic.example.solid.i.bad;

/**
 * 订单类
 */
public class Order {

    private int amount;

    public int amount() {
        //计算订单金额
        return amount;
    }

}
